--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./1_Lekce>index.html">1. Lekce</a>
-    <a href="./2.Lekce>index.html">2. Lekce</a>
-    <a href="./3.Lekce>index.html">3. Lekce</a>
-    <a href="./4.Lekce>index.html">4. Lekce</a>
+    <a href="./1.lekce/index.html">1. Lekce</a>
+    <a href="./2.Lekce/index.html">2. Lekce</a>
+    <a href="./3. lekce/index.html">3. Lekce</a>
+    <a href="./4.Lekce/index.html">4. Lekce</a>
     <a href="./4.Lekce/1.Cviceni/index.html">4-1. Lekce</a>
     <a href="./4.Lekce/2.Cviceni/index.html">4-1. Lekce</a>
     <a href="/Závěrečný projekt/index.html">Závěrečný projekt</a>
